--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,30 +8,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>To Do List</h1>
+  <section class="whole">
+    <h1>To Do List</h1>
 
-  <form action="/tasks" method="POST">
-    <input type="text" placeholder="task" name="taskName">
-    <button type="submit">Submit</button>
-  </form>
+    <form action="/tasks" method="POST">
+      <input type="text" placeholder="task" name="taskName">
+      <button type="submit">Submit</button>
+    </form>
 
-  <h3>Tasks</h3>
-  <ul class="">
-  <% for(var i=0; i<tasks.length; i++) {%>
-    <li class="allTaskItems">
-      <span id="<%= tasks[i]._id %>"  class="taskItem <%= tasks[i].complete ? 'complete': '' %>" ><%= tasks[i].taskName %></span>
+    <section>
+      <h3>Tasks</h3>
+      <ul class="">
+      <% for(var i=0; i<tasks.length; i++) {%>
+        <li class="allTaskItems">
+          <span id="<%= tasks[i]._id %>"  class="taskItem <%= tasks[i].complete ? 'complete': '' %>" ><%= tasks[i].taskName %></span>
 
-      <span><i class="fa fa-trash" aria-hidden="true"></i></span>
-    </li>
-  <% } %>
-  </ul>
+          <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+        </li>
+      <% } %>
+      </ul>
+    </section>
 
-  <h2 class="total"><%= tasks.length - tasks.reduce((acc,task) => task.complete ? acc+1 : acc,0) %></h2>
+    <h2 class="total"><%= tasks.length - tasks.reduce((acc,task) => task.complete ? acc+1 : acc,0) %></h2>
 
-  <section>
-      <button class="clear">Clear</button>
+    <section>
+        <button class="clear">Clear</button>
+    </section>
   </section>
-
   <script src="main.js"></script>
 </body>
 </html>
